crates/store_app/re_dataframe/src/snapshots/re_dataframe__query__tests__selection.snap
---
source: crates/store_app/re_dataframe/src/query.rs
expression: DisplayRB(dataframe)
---
┌┐
╞╡
└┘
